# lqxyx

./: AGENTS.md  TOOLS.md  a.txt  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  第一幕剧本.txt
.omo/evidence/: task-3-mcm-minecraft-manager-expansion.txt
.omo/plans/: ying-zhong-jiu-game.md
.omo/run-continuation/: ses_129fddca3ffeogUP0esS1zRoQy.json  ses_12b076212ffeXVuoBEw3X5OLgd.json  ses_12d31b754ffeEyTptGc22e1o2I.json  ses_13291b998ffe3uEeX4jJbwAFkF.json  ses_13f232b8effekpmI8jpHPbnnUU.json  ses_13f2b7501ffe6NJiBM9Al2xqMq.json  (+13 more)
521bugmail/: ecosystem.config.js  site-monitor.js
englishd/: server.js
lqxyx/: .gitignore  AGENTS.md  DELIVERY.md  DESIGN.md  ecosystem.config.cjs  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  第一幕剧本.txt
mail/: server.js
mcm/: Cargo.toml  README.md
mcm/.omo/notepads/mcm-minecraft-manager-expansion/: learnings.md
mcm/src/: app.rs  cli.rs  config.rs  confirmation.rs  game_cmd.rs  game_model.rs  install.rs  lib.rs  lifecycle.rs  lock.rs  main.rs  mc_target.rs  mcm_package.rs  pkg_cmd.rs  pkg_install.rs  profile_cmd.rs  provider.rs  queries.rs  safety.rs  source_cmd.rs  source_index.rs
mcm/src/provider/: curseforge.rs  mock.rs  modrinth.rs  source.rs
mcm/tests/: characterization.rs  confirmation.rs  game_config.rs  mc_target.rs  mcm_package.rs  pkg_cmd.rs
memory/: 2026-03-22.md
scripts/: gen-frame5-fix.cjs  gen-lockpick-fix.cjs  gen-overlay-assets.cjs  gen-ui-assets.cjs  manual-qa-tone.mjs  update-tests.cjs  verify.mjs
src/: main.ts  phaser-texture-manager.d.ts  styles.css
(+474 files in other folders)
