[package]
name = "mcm"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Like a Linux package manager for Minecraft mods"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
